# kaggle-agent

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
competitions/: .gitignore
competitions/playground-series-s6e6/: .gitignore  CURSOR.md  LEADER_GAP_ANALYSIS.md  analyze_correlation.py  baseline.py  blend.py  config.py  download.py  eda_report.md  exp_perseed.py  features.py  gbdt_meta_pool48.py  gbdt_meta_submit.py  hillclimb.py  meta_gbdt.py  meta_tune.py  nested_cv.py  run_pipeline.py  select_final.py  stack.py  strat_calib.py  strat_multilevel.py  train_oof.py  tune.py
competitions/playground-series-s6e6/kaggle/autogluon/: run.py
competitions/playground-series-s6e6/kaggle/catv3/: run.py
docs/superpowers/specs/: 2025-06-10-kaggle-agent-design.md
knowledge/playbooks/: general.md  tabular.md
knowledge/playbooks/techniques/: kfold-cv.md  target-encoding.md
knowledge/skills/: __init__.py
knowledge/skills/cross_validation/: __init__.py  stratified_kfold.py  stratified_kfold.yaml
knowledge/skills/feature_engineering/: __init__.py  target_encoding.py  target_encoding.yaml
knowledge/skills/models/: __init__.py  lgbm_classifier.py  lgbm_classifier.yaml
src/kaggle_agent/: __init__.py  cli.py  config.py  interaction.py  orchestrator.py
src/kaggle_agent/knowledge/: __init__.py  playbooks.py  reflection.py  skills.py
src/kaggle_agent/llm/: __init__.py  __main__.py  base.py  cursor.py  litellm.py  placeholder.py
src/kaggle_agent/tools/: __init__.py  executor.py  kaggle_api.py  kernel_fleet.py  tracker.py
tests/integration/: test_titanic_smoke.py
tests/unit/: test_config.py  test_knowledge.py  test_llm.py  test_orchestrator_signals.py  test_tools.py
(+35 files in other folders)
